<resources>
    <string name="app_name">Jurnal Prakerin</string>
    <string name="nama">Nama</string>
    <string name="nip">Nomor Induk Pegawai</string>
    <string name="email">Email</string>
    <string name="btnUpdate">Perbarui</string>
    <string name="namaIndustri">Nama Industri</string>
    <string name="nii">Kode Industri</string>
    <string name="namaPimpinan">Nama Pimpinan</string>
    <string name="alamat">Alamat Tempat Tinggal</string>
    <string name="notlp">Nomor Telepon</string>
    <string name="nofax">Nomor Fax</string>
    <string name="namaPembimbing">Nama Pembimbing</string>
    <string name="nis">Nomor Induk Siswa</string>
    <string name="ttl">Tanggal Lahir</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="nohp">Nomor Telepon</string>
    <string name="notlportu">Nomor Telepon Orang Tua</string>
    <string name="empty">Belum Ada Data</string>
    <string name="google_sign_in">Akun Google</string>

    <string-array name="tempatPrakerin">
        <item>Tempat Prakerin</item>
        <item>Ilvermorny</item>
        <item>Hogwarts</item>
        <item>Castelobruxo</item>
    </string-array>

    <string-array name="jk">
        <item>Jenis Kelamin</item>
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>



    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="infoGuru">Daftar Guru</string>
    <string name="infoGuru2">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="infoIndustri">Daftar Industri</string>
    <string name="infoSiswa">Daftar Siswa</string>
    <string name="tempatprakerin">Tempat Prakerin</string>
    <string name="kegiatan">Kegiatan</string>
    <string name="deskeg">Deskripsi Kegiatan</string>
    <string name="tempatKegiatan">Tempat Kegiatan</string>
    <string name="tanggal">Tanggal</string>
    <string name="waktu">Waktu</string>


</resources>
