<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#34F3F3F3"
    android:minWidth="350dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etg_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/namaIndustri"
            android:textColorHint="@color/text2"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textColor="@color/text2"
            android:textSize="20dp"
            android:background="@drawable/menu_shape"
            android:paddingLeft="20dp"
            android:layout_margin="10dp">
        </EditText>

        <EditText
            android:id="@+id/etg_nii"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nii"
            android:textColorHint="@color/text2"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textColor="@color/text2"
            android:textSize="20dp"
            android:background="@drawable/menu_shape"
            android:paddingLeft="20dp"
            android:layout_margin="10dp"
            android:inputType="number">
        </EditText>

        <EditText
            android:id="@+id/etg_namaPimpinan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/namaPimpinan"
            android:textColorHint="@color/text2"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textColor="@color/text2"
            android:textSize="20dp"
            android:background="@drawable/menu_shape"
            android:paddingLeft="20dp"
            android:layout_margin="10dp">
        </EditText>

        <EditText
            android:id="@+id/etg_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alamat"
            android:minLines="5"
            android:textColorHint="@color/text2"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textColor="@color/text2"
            android:textSize="20dp"
            android:background="@drawable/menu_shape"
            android:paddingLeft="20dp"
            android:layout_margin="10dp">
        </EditText>

        <EditText
            android:id="@+id/etg_notlp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notlp"
            android:textColorHint="@color/text2"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textColor="@color/text2"
            android:textSize="20dp"
            android:background="@drawable/menu_shape"
            android:paddingLeft="20dp"
            android:layout_margin="10dp"
            android:inputType="number">
        </EditText>

        <EditText
            android:id="@+id/etg_nofax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nofax"
            android:textColorHint="@color/text2"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textColor="@color/text2"
            android:textSize="20dp"
            android:background="@drawable/menu_shape"
            android:paddingLeft="20dp"
            android:layout_margin="10dp"
            android:inputType="number">
        </EditText>

        <EditText
            android:id="@+id/etg_namaPembimbing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/namaPembimbing"
            android:textColorHint="@color/text2"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textColor="@color/text2"
            android:textSize="20dp"
            android:background="@drawable/menu_shape"
            android:paddingLeft="20dp"
            android:layout_margin="10dp">
        </EditText>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Perbarui Data Industri"
                android:background="@drawable/button_shape"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="@color/text1"
                android:textSize="20dp"/>

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Hapus Data Industri"
                android:background="@drawable/button_shape"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="@color/text1"
                android:textSize="20dp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
