<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/background1"
    tools:context=".ProfileEditActivity"
    android:minWidth="350dp">

    <EditText
        android:id="@+id/etNama"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/nama"
        android:textColorHint="@color/text2"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="@color/text2"
        android:textSize="20dp"
        android:background="@drawable/menu_shape"
        android:paddingLeft="20dp"
        android:layout_margin="20dp"/>

    <EditText
        android:id="@+id/etRole"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Role"
        android:textColorHint="@color/text2"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="@color/text2"
        android:textSize="20dp"
        android:background="@drawable/menu_shape"
        android:paddingLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/text2"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="@color/text2"
        android:textSize="20dp"
        android:background="@drawable/menu_shape"
        android:paddingLeft="20dp"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/btn_profileUpdateEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnUpdate"
        android:background="@drawable/button_shape"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="@color/text1"
        android:textSize="20dp"
        android:layout_margin="20dp"/>

</LinearLayout>
