<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightestDaisy"
    android:layout_gravity="center"
    android:minWidth="350dp"
    android:maxHeight="500dp"
    tools:context=".ActivityProfileEdit"
    android:id="@+id/editprofilepage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tambah Aktivitas"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_margin="5dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textColor="@color/raven"
            android:textSize="25dp"
            android:layout_alignParentLeft="true"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"/>
        <Button
            android:id="@+id/btncloseaddaktivitas"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:gravity="right"
            android:background="@drawable/exit"
            android:layout_margin="5dp"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etg_keg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kegiatan"
                android:background="@drawable/menu_shape"
                android:textColorHint="@color/item"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="@color/item"
                android:textSize="20dp"
                android:paddingLeft="20dp"
                android:layout_margin="5dp">
            </EditText>

            <EditText
                android:id="@+id/etg_desKeg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/deskeg"
                android:minLines="5"
                android:textColorHint="@color/item"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="@color/item"
                android:textSize="20dp"
                android:background="@drawable/menu_shape"
                android:paddingLeft="20dp"
                android:layout_margin="5dp">
            </EditText>

            <EditText
                android:id="@+id/etg_tempat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tempatKegiatan"
                android:textColorHint="@color/item"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="@color/item"
                android:textSize="20dp"
                android:background="@drawable/menu_shape"
                android:paddingLeft="20dp"
                android:layout_margin="5dp">
            </EditText>


            <!--<Spinner
                android:id="@+id/spinner_jk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/menu_shape"
                android:entries="@array/jk"
                android:fontFamily="casual"
                android:hint="@string/jk"
                android:paddingLeft="20dp"
                android:state_focused="true"
                android:textColor="@color/item"
                android:textColorHint="@color/item"
                android:textSize="20dp"
                android:textStyle="bold" />-->

            <EditText
                android:id="@+id/etg_tanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/menu_shape"
                android:fontFamily="casual"
                android:hint="@string/tanggal"
                android:inputType="date"
                android:paddingLeft="20dp"
                android:textColor="@color/item"
                android:textColorHint="@color/item"
                android:textSize="20dp"
                android:textStyle="bold"></EditText>

            <EditText
                android:id="@+id/etg_waktu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/waktu"
                android:textColorHint="@color/item"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="@color/item"
                android:textSize="20dp"
                android:background="@drawable/menu_shape"
                android:paddingLeft="20dp"
                android:layout_margin="5dp"
                android:inputType="number">
            </EditText>

            <Button
                android:id="@+id/btnAddAktivitas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttonstyle"
                android:fontFamily="casual"
                android:text="Tambah AKtivitas"
                android:textColor="@color/lightestDaisy"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>